# meowdem

./: .gitignore  MiSTer_disable_meowdem.sh  MiSTer_disable_test.sh  MiSTer_enable_meowdem.sh  MiSTer_enable_test.sh  README.md  meowdem.py  meowdem_test.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
meowdem/: __main__.py  code.py  code_test.py  input_handler.py  input_handler_test.py  util.py
scripts/: MiSTer_disable_meowdem.sh  MiSTer_enable_meowdem.sh  install_meowdem.sh
