[project]
name = "meowdem"
version = "0.1.0"
description = "A software modem emulator for really weird nerds."
readme = "README.md"
requires-python = ">=3.4"
authors = [
    {name = "Justin May", email = "may.justin@gmail.com"},
]
dependencies = []

[dependency-groups]
test = [
    "pytest>=4.6.11",
    "pytest-asyncio>=0.6.0",
    "pytest-cov>=2.12.1",
]
